# ai-ops-tools

./: .env.example  .gitignore  GROK_CONTEXT.md  PORTFOLIO_JeremySmith.md  QUICKSTART.md  README.md  docker-compose.yml  portfolio
.grok/: CLAUDE.md  settings.json
config/: environment.template.json
config/claude/: settings.local.json
core/Secondbrain/: .gitignore  .secret_key  ADD_SHAREPOINT_PERMISSIONS.md  AGENT_ADDITIONS.md  AGENT_SYSTEM_OVERVIEW.md  CHANGELOG.md  CLAUDE_CLI_GUIDE.md  COMMENTS_SYSTEM_README.md  Customer_Network_Complexity_Report.html  DEPLOYMENT_GUIDE.md  ENGINEERING_COMMAND_CENTER_ANALYSIS.md  GRAPH_VIEW_GUIDE.md  HOW_TO_USE_RAG.md  IMPORT_GUIDE.md  OBERACONNECT_SHAREPOINT_WORKFLOW.md  OPEN_DASHBOARD_WITH_COMMENTS.bat  OberaConnect_Comprehensive_AI_Transformation_Strategy.html  RAG_USAGE_GUIDE.md  README.md  README_OLD.md  SETUP_COMPLETE.md  SHAREPOINT_READONLY_SETUP.md  SOP-Template-Scribe-Style.docx  SOP_TRANSFORMATION_STRATEGY.md  Saint_Annes_UniFi_Migration.html  Saint_Annes_VLAN_Reference.html  TEAM_LINK_CLUSTERS_SUMMARY.md  UI_IMPROVEMENT_PLAN.md  action_item_planner.html  action_planner_final.html  activate.sh  add_comments_column.py  add_links_for_graph.py  agent_ba.py  agent_notebooklm_analyst.py  agent_obsidian_manager.py  agent_orchestrator.py  agentic_rag.py  ai_council_prompt.txt  ai_council_review_round2.md  (+120 more)
core/Secondbrain/oberaconnect-review/oberaconnect-mcp/: pyproject.toml
core/Secondbrain/oberaconnect-review/oberaconnect-mcp/src/: __init__.py  server.py
core/Secondbrain/oberaconnect-review/oberaconnect-tools/: .dockerignore  .env.example  Dockerfile  __init__.py  docker-compose.yml  pyproject.toml
core/Secondbrain/oberaconnect-review/oberaconnect-tools/.github/workflows/: ci.yml
core/Secondbrain/oberaconnect-review/oberaconnect-tools/common/: __init__.py  audit.py  cache.py  logging.py  maker_checker.py  notifications.py  validators.py
core/Secondbrain/oberaconnect-review/oberaconnect-tools/docs/: RUNBOOK.md
core/Secondbrain/oberaconnect-review/oberaconnect-tools/n8n/: __init__.py  webhook_api.py
core/Secondbrain/oberaconnect-review/oberaconnect-tools/ninjaone/: __init__.py  client.py  correlator.py
core/Secondbrain/oberaconnect-review/oberaconnect-tools/tests/: __init__.py  conftest.py  test_analyzer.py  test_maker_checker.py  test_ninjaone_client.py  test_unifi_models.py  test_validators.py
core/Secondbrain/oberaconnect-review/oberaconnect-tools/unifi/: __init__.py  analyzer.py  api_client.py  checkers.py  cli.py  models.py
core/multi-ai-orchestrator/: IMPLEMENTATION.md  LICENSE  README.md  quick-test.sh  setup.py  (+1 more)
docs/: DOCKER.md
n8n-workflows/: azure-backup-report-daily.json  oberaai-strategy-daily.json  project-automation-daily.json
scripts/: daily_github_sync.sh
(+1541 files in other folders)
