[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oberaconnect-mcp"
version = "1.0.0"
description = "MCP server for OberaConnect tools"
requires-python = ">=3.9"
dependencies = [
    "mcp>=0.1.0",
    "oberaconnect-tools>=1.0.0",
]

[project.scripts]
oberaconnect-mcp = "src.server:main"
