[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oberaconnect-tools"
version = "1.0.0"
description = "OberaConnect MSP operations tools - UniFi fleet management, NinjaOne integration, validation framework"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.9"
authors = [
    {name = "OberaConnect", email = "engineering@oberaconnect.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: System :: Systems Administration",
]
keywords = ["msp", "unifi", "ninjaone", "network", "monitoring"]

dependencies = [
    "requests>=2.28.0",
    "flask>=2.3.0",
    "tenacity>=8.2.0",  # Retry with exponential backoff
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",  # Security linting
    "safety>=2.3.0",  # Dependency vulnerability scanning
]
mcp = [
    "mcp>=0.1.0",
]
cache = [
    "redis>=4.5.0",
]

[project.scripts]
unifi-cli = "oberaconnect_tools.unifi.cli:main"
oberaconnect-api = "oberaconnect_tools.n8n.webhook_api:run_server"

[project.urls]
"Homepage" = "https://github.com/jerm71279/oberaconnect-ai-ops"
"Repository" = "https://github.com/jerm71279/oberaconnect-ai-ops"

[tool.setuptools.packages.find]
where = ["."]
include = ["oberaconnect_tools*"]

[tool.setuptools.package-dir]
oberaconnect_tools = "."

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
